fixed overlap rule in firefox for AGR-1100

--- a/src/style.scss
+++ b/src/style.scss
@@ -50,7 +50,7 @@ Ribbon includes.
 .link {
   text-decoration: none;
   color: #247BBD;
-  display: inline-block;
+  display: inline;
 }
 
 .link:visited {
